--- a/about.html
+++ b/about.html
@@ -1,1 +1,130 @@
-<!DOCTYPE html><html lang="uk"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="robots" content="index, follow"><meta name="google-adsense-account" content="ca-pub-7670201293870640"><title>Про нас - Знання для всіх</title><meta name="description" content="Дізнайтесь більше про проєкт Знання для всіх: освітні вікторини з географії, історії, Біблії для всієї родини."><meta name="keywords" content="про нас, знання для всіх, вікторини, освіта, YouTube, тести, НМТ 2025"><meta property="og:title" content="Про нас - Знання для всіх"><meta property="og:description" content="Дізнайтесь більше про проєкт Знання для всіх: освітні вікторини з географії, історії, Біблії для всієї родини."><meta property="og:url" content="https://www.znannia.online/about.html"><meta property="og:image" content="https://www.znannia.online/logo.png"><meta property="og:type" content="website"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:title" content="Про нас - Знання для всіх"><meta name="twitter:description" content="Дізнайтесь більше про проєкт Знання для всіх: освітні вікторини з географії, історії, Біблії для всієї родини."><meta name="twitter:image" content="https://www.znannia.online/logo.png"><link rel="canonical" href="https://www.znannia.online/about.html"><link rel="icon" href="favicon.ico" type="image/x-icon"><link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><link rel="apple-touch-icon" href="favicon.ico"><link rel="stylesheet" href="style.css"><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><link rel="alternate" hreflang="uk" href="https://www.znannia.online/about.html"><link rel="alternate" hreflang="x-default" href="https://www.znannia.online/about.html"><script async src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script><script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date);gtag("config","G-SYFG3B62FV");</script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640" crossorigin="anonymous"></script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Головна","item":"https://www.znannia.online/"},{"@type":"ListItem","position":2,"name":"Про нас","item":"https://www.znannia.online/about.html"}]}</script></head><body><header><div class="logo"><a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" loading="lazy"></a><div class="youtube-icon"><a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a></div></div><div class="header-center"><p class="welcome-text">ВІТАЄМО НА КАНАЛІ</p><h1><a href="index.html">ЗНАННЯ ДЛЯ ВСІХ</a></h1><p class="subtitle">Тести й вікторини - для всієї родини!</p><p class="slogan">Перевірте свої знання!</p></div><div class="header-right"><div id="subscribers" class="subscribers"></div><a href="https://www.youtube.com/@ЗнанняДляВсіхТак?sub_confirmation=1" target="_blank" class="subscribe-btn">Підписатися</a></div></header><div class="divider"></div><div class="category-buttons"><a href="category.html?category=Географія" class="category-btn">Географія</a><a href="category.html?category=Історія" class="category-btn">Історія</a><a href="category.html?category=Біблія" class="category-btn">Біблія</a><a href="category.html?category=Україна" class="category-btn">Україна</a><a href="category.html?category=Загальні знання" class="category-btn">Загальні знання</a><a href="category.html?category=Логіка" class="category-btn">Логіка</a><a href="category.html?category=Що зайве" class="category-btn">Що зайве</a><a href="category.html?category=Не програєш" class="category-btn">Не програєш</a></div><div class="about"><h2>Про нас</h2><div class="about-text"><p>"Знання для всіх" – це унікальний освітній проєкт, створений для тих, хто любить перевіряти свої знання та дізнаватися нове у цікавій формі. Ми пропонуємо тести й вікторини з <a href="category.html?category=Географія">географії</a>, <a href="category.html?category=Історія">історії</a>, <a href="category.html?category=Біблія">Біблії</a>, <a href="category.html?category=Україна">культури України</a>, <a href="category.html?category=Логіка">логіки</a> та багатьох інших тем, які захоплюють і об’єднують усю родину.</p><p>Наш YouTube-канал – це місце, де знання стають грою, а навчання – задоволенням для всієї сім’ї. З понад 22 000 підписників і сотнями тисяч переглядів щомісяця ми створюємо контент, який ідеально підходить для сімейного дозвілля, дружніх посиденьок чи цікавого вечора разом із близькими.</p><p>Приєднуйтесь до нас на <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank">YouTube</a>, щоб разом із родиною відкривати світ знань! Підписуйтесь і ставайте частиною спільноти, де кожен знайде щось цікаве для себе.</p></div></div><footer><div class="footer-left"><div class="footer-youtube-icon"><a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a></div><p><a href="mailto:znanniadliavsikh@gmail.com">znanniadliavsikh@gmail.com</a></p></div><div class="footer-center"><button id="categories-btn" aria-expanded="false" aria-controls="categories-list">Категорії</button><ul id="categories-list" style="display:none"><li><a href="category.html?category=Географія">Географія</a></li><li><a href="category.html?category=Історія">Історія</a></li><li><a href="category.html?category=Біблія">Біблія</a></li><li><a href="category.html?category=Україна">Україна</a></li><li><a href="category.html?category=Загальні знання">Загальні знання</a></li><li><a href="category.html?category=Логіка">Логіка</a></li><li><a href="category.html?category=Що зайве">Що зайве</a></li><li><a href="category.html?category=Не програєш">Не програєш</a></li></ul><div class="footer-links"><a href="about.html">Про нас</a><a href="contact.html">Контакти</a><a href="collaboration.html">Співпраця</a><a href="privacy.html">Політика конфіденційності</a></div></div><div class="footer-right"><a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" class="footer-logo" loading="lazy"></a><p>© 2025 Знання для всіх</p></div></footer><script src="script.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://pagead2.googlesyndication.com https://www.googletagmanager.com; style-src 'self' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src 'self' data: https://www.znannia.online; frame-src https://www.youtube.com;">
+    <meta name="google-adsense-account" content="ca-pub-7670201293870640">
+    <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="AS3pTU11DsjRwuy5LKmc0_WO1nd-QmU0lj0pQHFiiEk">
+    <title>Про нас - Знання для всіх</title>
+    <meta name="description" content="Дізнайтесь про проєкт Знання для всіх: освітні вікторини, тести та пізнавальні статті з географії, історії, Біблії для всієї родини.">
+    <meta name="keywords" content="про нас, знання для всіх, вікторини, освіта, статті, YouTube, тести, НМТ 2025, сімейне навчання">
+    <meta property="og:title" content="Про нас - Знання для всіх">
+    <meta property="og:description" content="Дізнайтесь про проєкт Знання для всіх: освітні вікторини, тести та пізнавальні статті з географії, історії, Біблії для всієї родини.">
+    <meta property="og:url" content="https://www.znannia.online/about.html">
+    <meta property="og:image" content="https://www.znannia.online/logo.png">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Про нас - Знання для всіх">
+    <meta name="twitter:description" content="Дізнайтесь про проєкт Знання для всіх: освітні вікторини, тести та пізнавальні статті з географії, історії, Біблії для всієї родини.">
+    <meta name="twitter:image" content="https://www.znannia.online/logo.png">
+    <meta name="twitter:site" content="@ZnanniaOnline">
+    <link rel="canonical" href="https://www.znannia.online/about.html">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="alternate" hreflang="uk" href="https://www.znannia.online/about.html">
+    <link rel="alternate" hreflang="x-default" href="https://www.znannia.online/about.html">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-SYFG3B62FV');
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Знання для всіх",
+        "url": "https://www.znannia.online",
+        "logo": "https://www.znannia.online/logo.png",
+        "sameAs": [
+            "https://www.youtube.com/@ЗнанняДляВсіхТак",
+            "mailto:znanniadliavsikh@gmail.com"
+        ],
+        "description": "Знання для всіх – освітній проєкт із вікторинами, тестами та статтями для всієї родини."
+    }
+    </script>
+</head>
+<body>
+    <header role="banner">
+        <div class="logo">
+            <a href="/"><img src="/logo.png" alt="Логотип Знання для всіх" loading="lazy"></a>
+            <div class="youtube-icon">
+                <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="/youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a>
+            </div>
+        </div>
+        <div class="header-center">
+            <p class="welcome-text">ВІТАЄМО НА КАНАЛІ</p>
+            <h1><a href="/">ЗНАННЯ ДЛЯ ВСІХ</a></h1>
+            <p class="subtitle">Тести, вікторини та статті для всієї родини!</p>
+            <p class="slogan">Перевірте свої знання!</p>
+        </div>
+        <div class="header-right">
+            <div id="subscribers" class="subscribers"></div>
+            <a href="https://www.youtube.com/@ЗнанняДляВсіхТак?sub_confirmation=1" target="_blank" class="subscribe-btn">Підписатися</a>
+        </div>
+    </header>
+    <div class="divider"></div>
+    <div class="category-buttons">
+        <a href="/geography.html" class="category-btn">Географія</a>
+        <a href="/history.html" class="category-btn">Історія</a>
+        <a href="/bible.html" class="category-btn">Біблія</a>
+        <a href="/ukraine.html" class="category-btn">Україна</a>
+        <a href="/general-knowledge.html" class="category-btn">Загальні знання</a>
+        <a href="/logic.html" class="category-btn">Логіка</a>
+        <a href="/what-is-extra.html" class="category-btn">Що зайве</a>
+        <a href="/never-lose.html" class="category-btn">Не програєш</a>
+    </div>
+    <div class="about">
+        <h2>Про нас</h2>
+        <div class="about-text">
+            <p>"Знання для всіх" – це унікальний освітній проєкт, створений для тих, хто любить навчатися, розважатися та відкривати нове у цікавій формі. Ми пропонуємо не лише захоплюючі <a href="/facts.html">тести й вікторини</a>, а й пізнавальні <a href="/facts.html">статті</a> з <a href="/geography.html">географії</a>, <a href="/history.html">історії</a>, <a href="/bible.html">Біблії</a>, <a href="/ukraine.html">культури України</a>, <a href="/logic.html">логіки</a> та багатьох інших тем, які об’єднують усю родину.</p>
+            <p>Наш сайт і <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank">YouTube-канал</a> – це місце, де знання стають грою, а навчання – задоволенням. Вся родина може проводити час разом, перевіряючи свої знання у вікторинах, читаючи цікаві статті або змагаючись у тестах. З понад 24 000 підписників і мільйонами переглядів ми створюємо контент, який ідеально підходить для сімейного дозвілля, дружніх посиденьок чи підготовки до <a href="/general-knowledge.html">НМТ 2025</a>.</p>
+            <p>Приєднуйтесь до нашої спільноти на <a href="https://www.youtube.com/@ЗнанняДляВсіхТак?sub_confirmation=1" target="_blank">YouTube</a> та досліджуйте світ знань разом із нами! Підписуйтесь, читайте наші <a href="/facts.html">цікаві факти</a> та ставайте частиною проєкту, де кожен знайде щось для себе.</p>
+        </div>
+        <ins class="adsbygoogle" style="display:block; margin: 1rem auto;" data-ad-client="ca-pub-7670201293870640" data-ad-slot="1234567890" data-ad-format="auto"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+    <footer role="contentinfo">
+        <div class="footer-left">
+            <div class="footer-youtube-icon">
+                <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="/youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a>
+            </div>
+            <p><a href="mailto:znanniadliavsikh@gmail.com">znanniadliavsikh@gmail.com</a></p>
+        </div>
+        <div class="footer-center">
+            <button id="categories-btn" aria-expanded="false" aria-controls="categories-list">Категорії</button>
+            <ul id="categories-list">
+                <li><a href="/geography.html">Географія</a></li>
+                <li><a href="/history.html">Історія</a></li>
+                <li><a href="/bible.html">Біблія</a></li>
+                <li><a href="/ukraine.html">Україна</a></li>
+                <li><a href="/general-knowledge.html">Загальні знання</a></li>
+                <li><a href="/logic.html">Логіка</a></li>
+                <li><a href="/what-is-extra.html">Що зайве</a></li>
+                <li><a href="/never-lose.html">Не програєш</a></li>
+                <li><a href="/facts.html">Цікаві факти</a></li>
+            </ul>
+            <div class="footer-links">
+                <a href="/about.html">Про нас</a>
+                <a href="/contact.html">Контакти</a>
+                <a href="/collaboration.html">Співпраця</a>
+                <a href="/privacy.html">Політика конфіденційності</a>
+            </div>
+        </div>
+        <div class="footer-right">
+            <a href="/"><img src="/logo.png" alt="Логотип Знання для всіх" class="footer-logo" loading="lazy"></a>
+            <p>© <script>document.write(new Date().getFullYear())</script> Знання для всіх</p>
+        </div>
+    </footer>
+    <script defer src="/script.js"></script>
+</body>
+</html>
