--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640"
-     crossorigin="anonymous"></script>
   <meta name="google-site-verification" content="AS3pTU11DsjRwuy5LKmc0_WO1nd-QmU0lj0pQHFiiEk">
   <meta name="google-adsense-account" content="ca-pub-7670201293870640">
   <meta name="robots" content="index, follow">
@@ -22,20 +20,118 @@
   <meta name="twitter:image" content="https://znannia.github.io/test/logo.png">
   <link rel="canonical" href="https://znannia.github.io/test/">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="alternate" hreflang="uk" href="https://znannia.github.io/test/">
   <link rel="alternate" hreflang="x-default" href="https://znannia.github.io/test/">
-  <link rel="preload" href="style.css" as="style">
-  <link rel="preload" href="logo.png" as="image">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script>
+  <style>
+    header {
+      display: flex;
+      align-items: center;
+      padding: 10px 20px;
+      background: linear-gradient(to right, #261514, #422321);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      position: relative;
+      overflow: hidden;
+    }
+    header::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(
+        circle at 20% 30%, rgba(0, 255, 0, 0.1) 2%, transparent 5%,
+        circle at 50% 60%, rgba(255, 215, 0, 0.1) 3%, transparent 6%,
+        circle at 80% 20%, rgba(255, 0, 0, 0.1) 2%, transparent 5%
+      );
+      opacity: 0.5;
+      filter: blur(5px);
+      pointer-events: none;
+    }
+    .header-center {
+      flex: 1;
+      text-align: center;
+    }
+    .welcome-text {
+      font-size: 18px;
+      margin: 0;
+      color: #ffffff;
+    }
+    h1 {
+      font-size: 75px;
+      margin: 0;
+      background: linear-gradient(to right, #FFD700, #FF0000);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    h1 a {
+      background: inherit;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-decoration: none;
+    }
+    .subtitle {
+      font-size: 22px;
+      background-color: #082020;
+      color: #ffffff;
+      display: inline-block;
+      padding: 5px 10px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      margin: 5px 0;
+    }
+    .slogan {
+      font-size: 20px;
+      color: #ffff00;
+      margin: 5px 0;
+    }
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+        min-height: 130px;
+      }
+      .header-center {
+        order: 1;
+        text-align: center;
+        width: 100%;
+      }
+      .welcome-text {
+        font-size: 12px;
+        margin: 5px 0;
+        line-height: 1;
+      }
+      h1 {
+        font-size: 36px;
+        margin: 5px 10px;
+        line-height: 1;
+      }
+      .subtitle {
+        font-size: 14px;
+        padding: 3px 6px;
+        margin: 5px 0;
+        line-height: 1.2;
+        background-color: #082020;
+        color: #ffffff;
+      }
+      .slogan {
+        font-size: 14px;
+        margin: 5px 0;
+        line-height: 1;
+        color: #FFD700;
+      }
+    }
+  </style>
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+  <script defer src="https://www.googletagmanager.com/gtag/js?id=G-SYFG3B62FV"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-SYFG3B62FV');
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640" crossorigin="anonymous"></script>
+  <script defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7670201293870640" crossorigin="anonymous"></script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -54,39 +150,38 @@
     }
   }
   </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Знання для всіх",
+    "url": "https://znannia.github.io/test/",
+    "sameAs": "https://www.youtube.com/@ЗнанняДляВсіхТак"
+  }
+  </script>
 </head>
 <body>
   <noscript>
-    <p>Для перегляду відео увімкніть JavaScript або відвідайте наш <a href="https://www.youtube.com/@ЗнанняДляВсіхТак">YouTube-канал</a>.</p>
+    <p>Для повного функціоналу увімкніть JavaScript. Ви можете переглянути наші вікторини на <a href="https://www.youtube.com/@ЗнанняДляВсіхТак">YouTube-каналі Знання для всіх</a>.</p>
   </noscript>
   <header role="banner">
-    <div class="logo">
-      <a href="index.html"><img src="logo.png" alt="Логотип Знання для всіх" loading="lazy"></a>
-      <div class="youtube-icon">
-        <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a>
-      </div>
-    </div>
     <div class="header-center">
       <p class="welcome-text">ВІТАЄМО НА КАНАЛІ</p>
       <h1><a href="index.html">ЗНАННЯ ДЛЯ ВСІХ</a></h1>
       <p class="subtitle">Тести й вікторини - для всієї родини!</p>
       <p class="slogan">Перевірте свої знання!</p>
     </div>
-    <div class="header-right">
-      <div id="subscribers" class="subscribers"></div>
-      <a href="https://www.youtube.com/@ЗнанняДляВсіхТак?sub_confirmation=1" target="_blank" class="subscribe-btn">Підписатися</a>
-    </div>
   </header>
   <div class="divider"></div>
   <div class="category-buttons">
-    <a href="geography.html" class="category-btn">Географія</a>
-    <a href="history.html" class="category-btn">Історія</a>
-    <a href="bible.html" class="category-btn">Біблія</a>
-    <a href="ukraine.html" class="category-btn">Україна</a>
-    <a href="general-knowledge.html" class="category-btn">Загальні знання</a>
-    <a href="logic.html" class="category-btn">Логіка</a>
-    <a href="what-is-extra.html" class="category-btn">Що зайве</a>
-    <a href="never-lose.html" class="category-btn">Не програєш</a>
+    <a href="geography.html" class="category-btn" role="button" aria-label="Відкрити категорію Географія">Географія</a>
+    <a href="history.html" class="category-btn" role="button" aria-label="Відкрити категорію Історія">Історія</a>
+    <a href="bible.html" class="category-btn" role="button" aria-label="Відкрити категорію Біблія">Біблія</a>
+    <a href="ukraine.html" class="category-btn" role="button" aria-label="Відкрити категорію Україна">Україна</a>
+    <a href="general-knowledge.html" class="category-btn" role="button" aria-label="Відкрити категорію Загальні знання">Загальні знання</a>
+    <a href="logic.html" class="category-btn" role="button" aria-label="Відкрити категорію Логіка">Логіка</a>
+    <a href="what-is-extra.html" class="category-btn" role="button" aria-label="Відкрити категорію Що зайве">Що зайве</a>
+    <a href="never-lose.html" class="category-btn" role="button" aria-label="Відкрити категорію Не програєш">Не програєш</a>
   </div>
   <div class="latest-videos">
     <h3>Останні відео</h3>
@@ -108,7 +203,7 @@
     <p>Ласкаво просимо до унікального освітнього порталу "Знання для всіх"! Наші захопливі вікторини та тести з географії, історії, Біблії, України, логіки та інших тем створені, щоб об’єднувати родини та друзів у веселому пізнанні світу. Ми пропонуємо розважальний контент, який допомагає дізнаватися нове, розвивати ерудицію та проводити час із користю.</p>
     <p class="extended-text">Усі відео та статті створені нашою командою контент-креаторів, які прагнуть зробити навчання цікавим і доступним. Обирайте улюблену категорію чи статтю, занурюйтесь у світ знань і насолоджуйтесь розвагами разом із близькими! Приєднуйтесь до тисяч користувачів, які відкривають радість навчання з нами. Дізнайтесь більше про культуру, історію, науку та Україну через наші унікальні тести та статті в розділі <a href="facts.html" style="color: #ffcc00;">Цікаві факти</a>.</p>
   </div>
-  <footer role="contentinfo">
+  <footer role="contentinfo" aria-label="Нижній колонтитул">
     <div class="footer-left">
       <div class="footer-youtube-icon">
         <a href="https://www.youtube.com/@ЗнанняДляВсіхТак" target="_blank"><img src="youtube-icon.png" alt="YouTube канал Знання для всіх" loading="lazy"></a>
@@ -140,6 +235,6 @@
       <p>© 2025 Знання для всіх</p>
     </div>
   </footer>
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </body>
 </html>
